# proi

./: .gitignore  CMakeLists.txt  Makefile  README.md  actions.h  addresses.txt  application.cpp  application.h  buyer.h  cash_register.cpp  cash_register.h  cash_worker.cpp  cash_worker.h  cli.cpp  cli.h  contractor.cpp  contractor.h  convert.cpp  convert.h  customer.cpp  customer.h  entity.cpp  entity.h  invoice.cpp  invoice.h  item.cpp  item.h  items.csv  main.cpp  main2.cpp  object_generator.cpp  object_generator.h  person.cpp  person.h  product.cpp  product.h  proi_21l_201_lab3  queue.cpp  queue.h  receipt.cpp  (+14 more)
config/: CMakeLists.txt  addresses.txt  items.csv  names.txt
reference/: Documentation.docx  example_log(2, 5, 128).txt
shop/: CMakeLists.txt  buyer.h  cash_register.cpp  cash_register.h  cash_worker.cpp  cash_worker.h  contractor.h  customer.cpp  customer.h  entity.cpp  entity.h  helper_worker.h  invoice.cpp  invoice.h  item.cpp  item.h  person.cpp  person.h  product.cpp  product.h  receipt.cpp  receipt.h  shop.cpp  shop.h  units.cpp  units.h  utility.cpp  utility.h  worker.cpp  worker.h
zad3/: application.cpp  cash_register.cpp  cli.h  contractor.h  entity.h  invoice.cpp  item.h  product.cpp
